for idaholab/Malcolm#64 and idaholab/Malcolm#16, some work delineating better between zeek fields and standardized field names

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -71,40 +71,40 @@ zeek.community_id=db:zeek.community_id;kind:termfield;friendly:Zeek Connection C
 zeek.logType=db:zeek.logType;kind:termfield;friendly:Zeek Log Type;help:Zeek Log Type
 zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;kind:termfield;friendly:Zeek Node;help:Zeek Node
-event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
-event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
-event.risk_score=db:event.risk_score;kind:float;friendly:Risk Score;help:Risk Score
-event.risk_score_norm=db:event.risk_score_norm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
-destination.hostname=db:destination.hostname;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
-destination.segment=db:destination.segment;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
-source.hostname=db:source.hostname;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
-source.segment=db:source.segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
 
 # basic connection information
+destination.geo.city_name=db:destination.geo.city_name;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
+destination.geo.country_name=db:destination.geo.country_name;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
+destination.hostname=db:destination.hostname;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
+destination.ip_reverse_dns=db:destination.ip_reverse_dns;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
+destination.oui=db:destination.oui;kind:termfield;friendly:Responding OUI;help:Responding OUI
+destination.segment=db:destination.segment;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
+event.freq_score_v1=db:event.freq_score_v1;kind:float;friendly:Freq Score v1;help:Freq Score v1
+event.freq_score_v2=db:event.freq_score_v2;kind:float;friendly:Freq Score v2;help:Freq Score v2
+event.risk_score=db:event.risk_score;kind:float;friendly:Risk Score;help:Risk Score
+event.risk_score_norm=db:event.risk_score_norm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
+event.severity=db:event.severity;kind:integer;friendly:Severity;help:Severity
+event.severity_tags=db:event.severity_tags;kind:termfield;friendly:Severity Tags;help:Severity Tags
+source.geo.city_name=db:source.geo.city_name;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
+source.geo.country_name=db:source.geo.country_name;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
+source.hostname=db:source.hostname;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
+source.ip_reverse_dns=db:source.ip_reverse_dns;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
+source.oui=db:source.oui;kind:termfield;friendly:Originating OUI;help:Originating OUI
+source.segment=db:source.segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
+zeek.action=db:zeek.action;kind:termfield;friendly:Action;help:Action
 zeek.orig_h=db:zeek.orig_h;kind:termfield;friendly:Originating host;help:Originating Host
-zeek.orig_p=db:zeek.orig_p;kind:integer;friendly:Originating port;help:Originating Port
 zeek.orig_l2_addr=db:zeek.orig_l2_addr;kind:termfield;friendly:Originating MAC;help:Originating MAC
-zeek.orig_l2_oui=db:zeek.orig_l2_oui;kind:termfield;friendly:Originating OUI;help:Originating OUI
-zeek.source_ip_reverse_dns=db:zeek.source_ip_reverse_dns;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
-zeek.source_geo.city_name=db:zeek.source_geo.city_name;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
-zeek.source_geo.country_name=db:zeek.source_geo.country_name;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
-zeek.resp_h=db:zeek.resp_h;kind:termfield;friendly:Responding host;help:Responding Host
-zeek.resp_p=db:zeek.resp_p;kind:integer;friendly:Responding port;help:Responding Port
-zeek.resp_l2_addr=db:zeek.resp_l2_addr;kind:termfield;friendly:Responding MAC;help:Responding MAC
-zeek.resp_l2_oui=db:zeek.resp_l2_oui;kind:termfield;friendly:Responding OUI;help:Responding OUI
-zeek.destination_ip_reverse_dns=db:zeek.destination_ip_reverse_dns;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
-zeek.destination_geo.city_name=db:zeek.destination_geo.city_name;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
-zeek.destination_geo.country_name=db:zeek.destination_geo.country_name;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
+zeek.orig_p=db:zeek.orig_p;kind:integer;friendly:Originating port;help:Originating Port
+zeek.password=db:zeek.password;kind:termfield;friendly:Password;help:Password
 zeek.proto=db:zeek.proto;kind:lotermfield;friendly:Protocol;help:Protocol
+zeek.resp_h=db:zeek.resp_h;kind:termfield;friendly:Responding host;help:Responding Host
+zeek.resp_l2_addr=db:zeek.resp_l2_addr;kind:termfield;friendly:Responding MAC;help:Responding MAC
+zeek.resp_p=db:zeek.resp_p;kind:integer;friendly:Responding port;help:Responding Port
+zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
 zeek.service=db:zeek.service;kind:termfield;friendly:Service;help:Service
 zeek.service_version=db:zeek.service_version;kind:termfield;friendly:Service Version;help:Service Version
-zeek.action=db:zeek.action;kind:termfield;friendly:Action;help:Action
-zeek.result=db:zeek.result;kind:termfield;friendly:Result;help:Result
 zeek.user=db:zeek.user;kind:termfield;friendly:User;help:User
 zeek.user_agent=db:zeek.user_agent;kind:termfield;friendly:User Agent;help:User Agent
-zeek.password=db:zeek.password;kind:termfield;friendly:Password;help:Password
-zeek.freq_score_v1=db:zeek_dns.freq_score_v1;kind:float;friendly:Freq Score v1;help:Freq Score v1
-zeek.freq_score_v2=db:zeek_dns.freq_score_v2;kind:float;friendly:Freq Score v2;help:Freq Score v2
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
@@ -1048,10 +1048,10 @@ zeek_ssl.client_issuer.title=db:zeek_ssl.client_issuer.title;kind:termfield;frie
 zeek_ssl.client_issuer.initials=db:zeek_ssl.client_issuer.initials;kind:termfield;friendly:Client Issuer Initials;help:Client Issuer Initials
 zeek_ssl.client_issuer.emailAddress=db:zeek_ssl.client_issuer.emailAddress;kind:termfield;friendly:Client Issuer Email Address;help:Client Issuer Email Address
 zeek_ssl.validation_status=db:zeek_ssl.validation_status;kind:termfield;friendly:Validation Status;help:Validation Status
-zeek_ssl.ja3=db:zeek_ssl.ja3;kind:termfield;friendly:JA3 Fingerprint;help:JA3 Fingerprint
-zeek_ssl.ja3s=db:zeek_ssl.ja3s;kind:termfield;friendly:JA3S Fingerprint;help:JA3S Fingerprint
-zeek_ssl.ja3_desc=db:zeek_ssl.ja3_desc;kind:termfield;friendly:JA3 Fingerprint Lookup;help:JA3 Fingerprint Lookup
-zeek_ssl.ja3s_desc=db:zeek_ssl.ja3s_desc;kind:termfield;friendly:JA3S Fingerprint Lookup;help:JA3S Fingerprint Lookup
+tls.client.ja3=db:tls.client.ja3;kind:termfield;friendly:JA3 Client Fingerprint;help:JA3 Client Fingerprint
+tls.server.ja3s=db:tls.server.ja3s;kind:termfield;friendly:JA3 Server Fingerprint;help:JA3 Server Fingerprint
+tls.client.ja3_description=db:tls.client.ja3_description;kind:termfield;friendly:JA3 Client Fingerprint Lookup;help:JA3 Client Fingerprint Lookup
+tls.server.ja3s_description=db:tls.server.ja3s_description;kind:termfield;friendly:JA3 Server Fingerprint Lookup;help:JA3 Server Fingerprint Lookup
 
 
 # stun.log and stun_nat.log
@@ -1248,7 +1248,7 @@ zeek_snmp=require:zeek_snmp;title:Zeek snmp.log;fields:zeek_snmp.duration,zeek_s
 zeek_socks=require:zeek_socks;title:Zeek socks.log;fields:zeek_socks.version,zeek_socks.server_status,zeek_socks.request_host,zeek_socks.request_name,zeek_socks.request_port,zeek_socks.bound_host,zeek_socks.bound_name,zeek_socks.bound_port
 zeek_software=require:zeek_software;title:Zeek software.log;fields:zeek_software.software_type,zeek_software.name,zeek_software.version_major,zeek_software.version_minor,zeek_software.version_minor2,zeek_software.version_minor3,zeek_software.version_addl,zeek_software.unparsed_version
 zeek_ssh=require:zeek_ssh;title:Zeek ssh.log;fields:zeek_ssh.version,zeek_ssh.auth_success,zeek_ssh.auth_attempts,zeek_ssh.direction,zeek_ssh.client,zeek_ssh.server,zeek_ssh.cipher_alg,zeek_ssh.mac_alg,zeek_ssh.compression_alg,zeek_ssh.kex_alg,zeek_ssh.host_key_alg,zeek_ssh.host_key,zeek_ssh.remote_location_country_code,zeek_ssh.remote_location_region,zeek_ssh.remote_location_city,zeek_ssh.remote_location_latitude,zeek_ssh.remote_location_longitude,zeek_ssh.hassh,zeek_ssh.hasshServer,zeek_ssh.hasshAlgorithms,zeek_ssh.hasshServerAlgorithms,zeek_ssh.cshka,zeek_ssh.sshka
-zeek_ssl=require:zeek_ssl;title:Zeek ssl.log;fields:zeek_ssl.ssl_version,zeek_ssl.ssl_history,zeek_ssl.sni_matches_cert,zeek_ssl.cipher,zeek_ssl.curve,zeek_ssl.server_name,zeek_ssl.resumed,zeek_ssl.last_alert,zeek_ssl.next_protocol,zeek_ssl.established,zeek_ssl.ja3,zeek_ssl.ja3_desc,zeek_ssl.ja3s,zeek_ssl.ja3s_desc,zeek_ssl.cert_chain_fuids,zeek_ssl.cert_chain_fps,zeek_ssl.client_cert_chain_fuids,zeek_ssl.client_cert_chain_fps,zeek_ssl.subject.CN,zeek_ssl.subject.C,zeek_ssl.subject.O,zeek_ssl.subject.OU,zeek_ssl.subject.ST,zeek_ssl.subject.SN,zeek_ssl.subject.L,zeek_ssl.subject.GN,zeek_ssl.subject.pseudonym,zeek_ssl.subject.serialNumber,zeek_ssl.subject.title,zeek_ssl.subject.initials,zeek_ssl.subject.emailAddress,zeek_ssl.subject.description,zeek_ssl.subject.postalCode,zeek_ssl.subject.street,zeek_ssl.client_subject.CN,zeek_ssl.client_subject.C,zeek_ssl.client_subject.O,zeek_ssl.client_subject.OU,zeek_ssl.client_subject.ST,zeek_ssl.client_subject.SN,zeek_ssl.client_subject.L,zeek_ssl.client_subject.GN,zeek_ssl.client_subject.pseudonym,zeek_ssl.client_subject.serialNumber,zeek_ssl.client_subject.title,zeek_ssl.client_subject.initials,zeek_ssl.client_subject.emailAddress,zeek_ssl.issuer.CN,zeek_ssl.issuer.C,zeek_ssl.issuer.O,zeek_ssl.issuer.OU,zeek_ssl.issuer.ST,zeek_ssl.issuer.SN,zeek_ssl.issuer.L,zeek_ssl.issuer.DC,zeek_ssl.issuer.GN,zeek_ssl.issuer.pseudonym,zeek_ssl.issuer.serialNumber,zeek_ssl.issuer.title,zeek_ssl.issuer.initials,zeek_ssl.issuer.emailAddress,zeek_ssl.client_issuer.CN,zeek_ssl.client_issuer.C,zeek_ssl.client_issuer.O,zeek_ssl.client_issuer.OU,zeek_ssl.client_issuer.ST,zeek_ssl.client_issuer.SN,zeek_ssl.client_issuer.L,zeek_ssl.client_issuer.DC,zeek_ssl.client_issuer.GN,zeek_ssl.client_issuer.pseudonym,zeek_ssl.client_issuer.serialNumber,zeek_ssl.client_issuer.title,zeek_ssl.client_issuer.initials,zeek_ssl.client_issuer.emailAddress,zeek_ssl.validation_status
+zeek_ssl=require:zeek_ssl;title:Zeek ssl.log;fields:zeek_ssl.ssl_version,zeek_ssl.ssl_history,zeek_ssl.sni_matches_cert,zeek_ssl.cipher,zeek_ssl.curve,zeek_ssl.server_name,zeek_ssl.resumed,zeek_ssl.last_alert,zeek_ssl.next_protocol,zeek_ssl.established,tls.client.ja3,tls.client.ja3_description,tls.server.ja3s,tls.server.ja3s_description,zeek_ssl.cert_chain_fuids,zeek_ssl.cert_chain_fps,zeek_ssl.client_cert_chain_fuids,zeek_ssl.client_cert_chain_fps,zeek_ssl.subject.CN,zeek_ssl.subject.C,zeek_ssl.subject.O,zeek_ssl.subject.OU,zeek_ssl.subject.ST,zeek_ssl.subject.SN,zeek_ssl.subject.L,zeek_ssl.subject.GN,zeek_ssl.subject.pseudonym,zeek_ssl.subject.serialNumber,zeek_ssl.subject.title,zeek_ssl.subject.initials,zeek_ssl.subject.emailAddress,zeek_ssl.subject.description,zeek_ssl.subject.postalCode,zeek_ssl.subject.street,zeek_ssl.client_subject.CN,zeek_ssl.client_subject.C,zeek_ssl.client_subject.O,zeek_ssl.client_subject.OU,zeek_ssl.client_subject.ST,zeek_ssl.client_subject.SN,zeek_ssl.client_subject.L,zeek_ssl.client_subject.GN,zeek_ssl.client_subject.pseudonym,zeek_ssl.client_subject.serialNumber,zeek_ssl.client_subject.title,zeek_ssl.client_subject.initials,zeek_ssl.client_subject.emailAddress,zeek_ssl.issuer.CN,zeek_ssl.issuer.C,zeek_ssl.issuer.O,zeek_ssl.issuer.OU,zeek_ssl.issuer.ST,zeek_ssl.issuer.SN,zeek_ssl.issuer.L,zeek_ssl.issuer.DC,zeek_ssl.issuer.GN,zeek_ssl.issuer.pseudonym,zeek_ssl.issuer.serialNumber,zeek_ssl.issuer.title,zeek_ssl.issuer.initials,zeek_ssl.issuer.emailAddress,zeek_ssl.client_issuer.CN,zeek_ssl.client_issuer.C,zeek_ssl.client_issuer.O,zeek_ssl.client_issuer.OU,zeek_ssl.client_issuer.ST,zeek_ssl.client_issuer.SN,zeek_ssl.client_issuer.L,zeek_ssl.client_issuer.DC,zeek_ssl.client_issuer.GN,zeek_ssl.client_issuer.pseudonym,zeek_ssl.client_issuer.serialNumber,zeek_ssl.client_issuer.title,zeek_ssl.client_issuer.initials,zeek_ssl.client_issuer.emailAddress,zeek_ssl.validation_status
 zeek_stun=require:zeek_stun;title:Zeek stun.log;fields:zeek_stun.is_orig,zeek_stun.trans_id,zeek_stun.method,zeek_stun.class,zeek_stun.attr_type,zeek_stun.attr_val
 zeek_stun_nat=require:zeek_stun_nat;title:Zeek stun_nat.log;fields:zeek_stun_nat.is_orig,zeek_stun_nat.wan_addr,zeek_stun_nat.wan_port,zeek_stun_nat.lan_addr
 zeek_syslog=require:zeek_syslog;title:Zeek syslog.log;fields:zeek_syslog.facility,zeek_syslog.severity,zeek_syslog.message
