--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -21,7 +21,7 @@ filter {
       ieee_oui {
         id => "ieee_oui_srcMac"
         source => "[source][mac][0]"
-        target => "[zeek][orig_l2_oui]"
+        target => "[source][oui]"
         ouifile => "/usr/share/logstash/config/oui-logstash.txt"
         refresh_interval => 0
       }
@@ -47,19 +47,19 @@ filter {
             add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_src]}" }
           }
         }
-        if (![zeek][orig_l2_oui]) {
+        if (![source][oui]) {
           mutate {
-            id => "mutate_add_fields_orig_l2_oui_from_ics_guess_oui_src"
-            add_field => { "[zeek][orig_l2_oui]" => "%{[@metadata][ics_guess_oui_src]}" }
+            id => "mutate_add_fields_source_oui_from_ics_guess_oui_src"
+            add_field => { "[source][oui]" => "%{[@metadata][ics_guess_oui_src]}" }
           }
         }
       }
 
-      if ([zeek][orig_l2_oui]) {
+      if ([source][oui]) {
 
-        # merge orig_l2_oui into srcOui array (with a count of 1)
+        # merge source.oui into srcOui array (with a count of 1)
         mutate { id => "mutate_merge_field_srcOui"
-                 merge => { "[srcOui]" => "[zeek][orig_l2_oui]" } }
+                 merge => { "[srcOui]" => "[source][oui]" } }
         mutate { id => "mutate_add_field_srcOuiCnt"
                  add_field => { "[srcOuiCnt]" => "1" } }
 
@@ -84,7 +84,7 @@ filter {
       ieee_oui {
         id => "ieee_oui_dstMac"
         source => "[destination][mac][0]"
-        target => "[zeek][resp_l2_oui]"
+        target => "[destination][oui]"
         ouifile => "/usr/share/logstash/config/oui-logstash.txt"
         refresh_interval => 0
       }
@@ -110,19 +110,19 @@ filter {
             add_field => { "[zeek_bestguess][category]" => "%{[@metadata][ics_guess_oui_dst]}" }
           }
         }
-        if (![zeek][resp_l2_oui]) {
+        if (![destination][oui]) {
           mutate {
-            id => "mutate_add_fields_resp_l2_oui_from_ics_guess_oui_dst"
-            add_field => { "[zeek][resp_l2_oui]" => "%{[@metadata][ics_guess_oui_dst]}" }
+            id => "mutate_add_fields_destination_oui_from_ics_guess_oui_dst"
+            add_field => { "[destination][oui]" => "%{[@metadata][ics_guess_oui_dst]}" }
           }
         }
       }
 
-      if ([zeek][resp_l2_oui]) {
+      if ([destination][oui]) {
 
-        # merge resp_l2_oui into dstOui array (with a count of 1)
+        # merge destination.oui into dstOui array (with a count of 1)
         mutate { id => "mutate_merge_field_dstOui"
-                 merge => { "[dstOui]" => "[zeek][resp_l2_oui]" } }
+                 merge => { "[dstOui]" => "[destination][oui]" } }
         mutate { id => "mutate_add_field_dstOuiCnt"
                  add_field => { "[dstOuiCnt]" => "1" } }
       }
@@ -149,7 +149,7 @@ filter {
       geoip {
         id => "geoip_srcIp_geo"
         source => "[source][ip]"
-        target => "[zeek][source_geo]"
+        target => "[source][geo]"
       }
       geoip {
         id => "geoip_srcIp_asn"
@@ -157,9 +157,9 @@ filter {
         source => "[source][ip]"
         target => "[@metadata][orig_asn]"
       }
-      if ([zeek][source_geo] and [zeek][source_geo][country_code2]) {
+      if ([source][geo] and [source][geo][country_code2]) {
         mutate { id => "mutate_add_field_srcGEO"
-                 add_field => { "[source][geo][country_iso_code]" => "%{[zeek][source_geo][country_code2]}" } }
+                 add_field => { "[source][geo][country_iso_code]" => "%{[source][geo][country_code2]}" } }
       }
       if ([@metadata][orig_asn] and [@metadata][orig_asn][as_org] and [@metadata][orig_asn][asn]) {
         mutate { id => "mutate_add_field_srcASN"
@@ -174,22 +174,22 @@ filter {
         mutate {
           id => "mutate_add_field_srcip_for_dns"
           add_field => {
-            "[zeek][source_ip_reverse_dns]" => "%{[source][ip]}"
+            "[source][ip_reverse_dns]" => "%{[source][ip]}"
           }
         }
         dns {
           id => "dns_source_ip_reverse_dns"
-          reverse => [ "[zeek][source_ip_reverse_dns]" ]
+          reverse => [ "[source][ip_reverse_dns]" ]
           action => "replace"
           hit_cache_size => 8000
           hit_cache_ttl => 300
           failed_cache_size => 8000
           failed_cache_ttl => 60
         }
-        if ([source][ip] == [zeek][source_ip_reverse_dns]) {
+        if ([source][ip] == [source][ip_reverse_dns]) {
           mutate {
             id => "mutate_remove_field_source_ip_reverse_dns"
-            remove_field => [ "[zeek][source_ip_reverse_dns]" ]
+            remove_field => [ "[source][ip_reverse_dns]" ]
           }
         }
       }
@@ -222,7 +222,7 @@ filter {
       geoip {
         id => "geoip_dstIp_geo"
         source => "[destination][ip]"
-        target => "[zeek][destination_geo]"
+        target => "[destination][geo]"
       }
       geoip {
         id => "geoip_dstIp_asn"
@@ -230,9 +230,9 @@ filter {
         source => "[destination][ip]"
         target => "[@metadata][resp_asn]"
       }
-      if ([zeek][destination_geo] and [zeek][destination_geo][country_code2]) {
+      if ([destination][geo] and [destination][geo][country_code2]) {
         mutate { id => "mutate_add_field_dstGEO"
-                 add_field => { "[destination][geo][country_iso_code]" => "%{[zeek][destination_geo][country_code2]}" } }
+                 add_field => { "[destination][geo][country_iso_code]" => "%{[destination][geo][country_code2]}" } }
       }
       if ([@metadata][resp_asn] and [@metadata][resp_asn][as_org] and [@metadata][resp_asn][asn]) {
         mutate { id => "mutate_add_field_dstASN"
@@ -249,22 +249,22 @@ filter {
         mutate {
           id => "mutate_add_field_dstip_for_dns"
           add_field => {
-            "[zeek][destination_ip_reverse_dns]" => "%{[destination][ip]}"
+            "[destination][ip_reverse_dns]" => "%{[destination][ip]}"
           }
         }
         dns {
           id => "dns_destination_ip_reverse_dns"
-          reverse => [ "[zeek][destination_ip_reverse_dns]" ]
+          reverse => [ "[destination][ip_reverse_dns]" ]
           action => "replace"
           hit_cache_size => 8000
           hit_cache_ttl => 300
           failed_cache_size => 8000
           failed_cache_ttl => 60
         }
-        if ([destination][ip] == [zeek][destination_ip_reverse_dns]) {
+        if ([destination][ip] == [destination][ip_reverse_dns]) {
           mutate {
             id => "mutate_remove_field_destination_ip_reverse_dns"
-            remove_field => [ "[zeek][destination_ip_reverse_dns]" ]
+            remove_field => [ "[destination][ip_reverse_dns]" ]
           }
         }
       }
@@ -313,8 +313,8 @@ filter {
               rescue Exception => e
                 event.set('ruby_exception', 'ruby_dns_freq_lookup: ' + e.message)
               end
-              event.set('[zeek][freq_score_v1]', scoresv1) unless (scoresv1.length == 0)
-              event.set('[zeek][freq_score_v2]', scoresv2) unless (scoresv2.length == 0)
+              event.set('[event][freq_score_v1]', scoresv1) unless (scoresv1.length == 0)
+              event.set('[event][freq_score_v2]', scoresv2) unless (scoresv2.length == 0)
             end"
     }
   } # end if dns.ip
@@ -409,14 +409,14 @@ filter {
     if ([@metadata][ENV_FREQ_LOOKUP] == "true") {
       # if requested, look up zeek_ssl.server_name queries using freq_server.py to get entropy scores
       http {
-        id => "rest_zeek_ssl_server_name_freq_lookup"
+        id => "rest_ssl_server_name_freq_lookup"
         url => "http://freq:10004/measure/%{[zeek_ssl][server_name]}"
         target_body => "[@metadata][zeek_ssl_server_name_freq]"
       }
       if ([@metadata][zeek_ssl_server_name_freq]) {
         grok {
           id => "grok_zeek_ssl_server_name_freq_parse"
-          match => { "[@metadata][zeek_ssl_server_name_freq]" => [ "^\(%{NUMBER:[zeek][freq_score_v1]}, %{NUMBER:[zeek][freq_score_v2]}\)$" ] }
+          match => { "[@metadata][zeek_ssl_server_name_freq]" => [ "^\(%{NUMBER:[event][freq_score_v1]}, %{NUMBER:[event][freq_score_v2]}\)$" ] }
         }
       }
     }
@@ -431,7 +431,7 @@ filter {
     translate {
       id => "translate_ssl_ja3"
       field => "[tls][ja3][0]"
-      destination => "[zeek_ssl][ja3_desc]"
+      destination => "[tls][client][ja3_description]"
       dictionary_path => "/etc/ja3.yaml"
     }
   }
@@ -440,7 +440,7 @@ filter {
     translate {
       id => "translate_ssl_ja3s"
       field => "[tls][ja3s][0]"
-      destination => "[zeek_ssl][ja3s_desc]"
+      destination => "[tls][server][ja3_description]"
       dictionary_path => "/etc/ja3.yaml"
     }
   }
