--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -6,6 +6,11 @@ filter {
     id => "mutate_convert_misc"
     convert => {
       "[certCnt]" => "integer"
+      "[client][bytes]" => "integer"
+      "[destination][bytes]" => "integer"
+      "[destination][mac-cnt]" => "integer"
+      "[destination][packets]" => "integer"
+      "[destination][port]" => "integer"
       "[dhcp][hostCnt]" => "integer"
       "[dhcp][idCnt]" => "integer"
       "[dhcp][macCnt]" => "integer"
@@ -15,18 +20,15 @@ filter {
       "[dns][opcodeCnt]" => "integer"
       "[dns][qcCnt]" => "integer"
       "[dns][qtCnt]" => "integer"
-      "[destination][bytes]" => "integer"
-      "[server][bytes]" => "integer"
-      "[destination][mac-cnt]" => "integer"
       "[dstOuiCnt]" => "integer"
-      "[destination][packets]" => "integer"
-      "[destination][port]" => "integer"
       "[email][dstCnt]" => "integer"
       "[email][idCnt]" => "integer"
+      "[email][smtpHelloCnt]" => "integer"
       "[email][srcCnt]" => "integer"
       "[email][subjectCnt]" => "integer"
       "[email][useragentCnt]" => "integer"
-      "[email][smtpHelloCnt]" => "integer"
+      "[event][freq_score_v1]" => "float"
+      "[event][freq_score_v2]" => "float"
       "[firstPacket]" => "integer"
       "[http][bodyMagicCnt]" => "integer"
       "[http][clientVersionCnt]" => "integer"
@@ -42,6 +44,10 @@ filter {
       "[krb5][snameCnt]" => "integer"
       "[lastPacket]" => "integer"
       "[length]" => "integer"
+      "[network][bytes]" => "integer"
+      "[network][packets]" => "integer"
+      "[network][vlan][id-cnt]" => "integer"
+      "[network][vlan][id]" => "integer"
       "[protocolCnt]" => "integer"
       "[quic][hostCnt]" => "integer"
       "[quic][useragentCnt]" => "integer"
@@ -50,12 +56,12 @@ filter {
       "[radius][framedIpCnt]" => "integer"
       "[radius][macCnt]" => "integer"
       "[segmentCnt]" => "integer"
+      "[server][bytes]" => "integer"
       "[source][bytes]" => "integer"
-      "[client][bytes]" => "integer"
       "[source][mac-cnt]" => "integer"
-      "[srcOuiCnt]" => "integer"
       "[source][packets]" => "integer"
       "[source][port]" => "integer"
+      "[srcOuiCnt]" => "integer"
       "[ssh][hasshCnt]" => "integer"
       "[ssh][hasshServerCnt]" => "integer"
       "[ssh][keyCnt]" => "integer"
@@ -65,14 +71,8 @@ filter {
       "[tls][ja3Cnt]" => "integer"
       "[tls][ja3sCnt]" => "integer"
       "[tls][versionCnt]" => "integer"
-      "[network][bytes]" => "integer"
       "[totDataBytes]" => "integer"
-      "[network][packets]" => "integer"
       "[userCnt]" => "integer"
-      "[network][vlan][id]" => "integer"
-      "[network][vlan][id-cnt]" => "integer"
-      "[zeek][freq_score_v1]" => "float"
-      "[zeek][freq_score_v2]" => "float"
     }
   }
 
