--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -247,13 +247,13 @@ filter {
     }
 
     # check for high-entropy domain names for non-internal connections
-    if ([zeek][freq_score_v1]) or ([zeek][freq_score_v2]) {
+    if ([event][freq_score_v1]) or ([event][freq_score_v2]) {
       ruby {
         id => "ruby_add_field_severity_domain_entropy"
         init => "$freqSeverityThreshold = ENV['FREQ_SEVERITY_THRESHOLD'] || '3.0'"
         code => "
-          freqs1 = event.get('[zeek][freq_score_v1]')
-          freqs2 = event.get('[zeek][freq_score_v2]')
+          freqs1 = event.get('[event][freq_score_v1]')
+          freqs2 = event.get('[event][freq_score_v2]')
           lowestFreqScore = [freqs1.nil? ? 100 : (freqs1.kind_of?(Array) ? freqs1.min : freqs1),
                              freqs2.nil? ? 100 : (freqs2.kind_of?(Array) ? freqs2.min : freqs2)].min
           if (lowestFreqScore < Float($freqSeverityThreshold)) then
