--- a/logstash/pipelines/zeek/20_zeek_to_ecs.conf
+++ b/logstash/pipelines/zeek/20_zeek_to_ecs.conf
@@ -385,14 +385,14 @@ filter {
                                                            merge => { "[related][hash]" => "[zeek_ssl][ja3s]" } } }
 
     # related.ip (all IP-type fields get rolled up into related.ip)
-    if ([zeek][destination_geo][ip]) {           mutate { id => "mutate_merge_field_related_ip_zeek_destination_geo_ip"
-                                                          merge => { "[related][ip]" => "[zeek][destination_geo][ip]" } } }
+    if ([destination][geo][ip]) {                mutate { id => "mutate_merge_field_related_ip_zeek_destination_geo_ip"
+                                                          merge => { "[related][ip]" => "[destination][geo][ip]" } } }
     if ([zeek][orig_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_orig_h"
                                                           merge => { "[related][ip]" => "[zeek][orig_h]" } } }
     if ([zeek][resp_h]) {                        mutate { id => "mutate_merge_field_related_ip_zeek_resp_h"
                                                          merge => { "[related][ip]" => "[zeek][resp_h]" } } }
-    if ([zeek][source_geo][ip]) {                mutate { id => "mutate_merge_field_related_ip_zeek_source_geo_ip"
-                                                          merge => { "[related][ip]" => "[zeek][source_geo][ip]" } } }
+    if ([source][geo][ip]) {                     mutate { id => "mutate_merge_field_related_ip_zeek_source_geo_ip"
+                                                          merge => { "[related][ip]" => "[source][geo][ip]" } } }
     if ([zeek_dhcp][assigned_ip]) {              mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_assigned_ip"
                                                           merge => { "[related][ip]" => "[zeek_dhcp][assigned_ip]" } } }
     if ([zeek_dhcp][requested_ip]) {             mutate { id => "mutate_merge_field_related_ip_zeek_dhcp_requested_ip"
