--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -40,6 +40,7 @@ jobs:
                ca-certificates \
                curl \
                debhelper-compat \
+               debian-archive-keyring \
                debootstrap \
                genisoimage \
                gettext \
