--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -30,6 +30,9 @@ jobs:
           all_but_latest: true
           access_token: ${{ secrets.GITHUB_TOKEN }}
       -
+        name: Docker build setup
+        uses: docker/setup-buildx-action@v1
+      -
         name: Build environment setup
         run: |
           sudo apt-get -q update
@@ -82,9 +85,6 @@ jobs:
           sudo /usr/bin/env bash ./build.sh
           popd
       -
-        name: Docker build setup
-        uses: docker/setup-buildx-action@v1
-      -
         name: ghcr.io login
         uses: docker/login-action@v1
         with:
@@ -95,7 +95,7 @@ jobs:
         name: Build and push ISO image
         uses: docker/build-push-action@v2
         with:
-          context: ./sensor-iso
-          file: ./docker/Dockerfile
+          context: .
+          file: ./sensor-iso/docker/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/hedgehog:${{ steps.extract_branch.outputs.branch }}
